@@ -67,6 +67,7 @@ source "$APPSDIR/examples/relays/Kconfig"
 source "$APPSDIR/examples/rgbled/Kconfig"
 source "$APPSDIR/examples/rgmp/Kconfig"
 source "$APPSDIR/examples/romfs/Kconfig"
+source "$APPSDIR/examples/sched_note/Kconfig"
 source "$APPSDIR/examples/sendmail/Kconfig"
 source "$APPSDIR/examples/serialblaster/Kconfig"
 source "$APPSDIR/examples/serialrx/Kconfig"
